[tool.poetry]
name = "networkout"
version = "0.1.0"
description = ""
authors = ["jakubpluta <plutakuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.38"
passlib = "^1.7.4"
pytest = "^7.1.2"
uvicorn = "^0.18.1"
alembic = "^1.8.0"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.9.1"}
bcrypt = "^3.2.2"
python-jose = "^3.3.0"
httpx = "^0.23.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
python-dotenv = "^0.20.0"
jwt = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
